Alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ ul {
 .attribution a { color: hsl(228, 45%, 44%); }
 @media (min-width: 48rem) {
   main {
+    margin-block: auto;
     grid-template-columns: repeat(2, 1fr);
   }
   .intro {
